feat: add library section

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,2 +1,10 @@
 [client]
 showSidebarNavigation = false
+
+
+[theme]
+primaryColor="#FF4B4B"
+backgroundColor="#FFFFFF"
+secondaryBackgroundColor="#F0F2F6"
+textColor="#31333F"
+font="sans serif"
